# MathKit

./: CMakeLists.txt
include/: bigint.h  lib.h
src/: bigint.cpp  lib.cpp  main.cpp
